# PythonCodes

DocChat/server/: app.py  config.py  index_building.py  index_loading.py
MortgageBroker/: cert.pem  db.sqlite3  key.pem  manage.py  requirements.txt
MortgageBroker/app/: admin.py  form_models.py  (+7 more)
MuseyAI/: app.py  check.py  chks.py  test.py  utils.py
OCRPDFReader/: ocrread.py
PDFExtractor/: project.py  requirements.txt
TypescriptDocumentBotLangchain/: demo.js  package-lock.json  package.json  tsconfig.json
chatbotapp/: README.md  app.py  config.py  ingest.py  ingestscrap.py  load_data.sh  pyproject.toml  scrapconfig.py
chatbotapp/adapter/: alabama.py  alaska.py  anrok.py  arizona.py  arkansas.py  avalara.py  california.py  colorado.py  connecticut.py  florida.py  georgia.py  hawaii.py  idaho.py  illinois.py  indiana.py  iowa.py  kansas.py  kentucky.py  louisiana.py  maine.py  maryland.py  massachusetts.py  michigan.py  minnesota.py  mississippi.py  missouri.py  nebraska.py  nevada.py  new jersey.py  new mexico.py  new york.py  north carolina.py  north dakota.py  numeral.py  ohio.py  oklahoma.py  pennsylvania.py  rhode island.py  salestaxhandbook.py  south carolina.py  (+14 more)
chatbotapp/adaptercontroller/: adapter_template.py  generate_adapter.py
chatbotapp/db/: connection.py
chatbotapp/templates/: index.html
chatbotapp/tests/deepeval/: deepevalllama_test.py
chatbotapp/tests/integrations/: integration_chatbot_test.py
chatbotapp/tests/unittests/: chatbot_test.py  connection_test.py  readurls_test.py  scrap_test.py
chatbotapp/vectorstore/: chatbot.py
(+27 files in other folders)
